adição estilo menssagem sucesso

--- a/antiveaco/static/css/divida/pesquisar_divida.css
+++ b/antiveaco/static/css/divida/pesquisar_divida.css
@@ -54,3 +54,10 @@ body {
     color: #888;
     padding: 20px;
   }
+  .success {
+    color: #065f46;
+    background: #e6ffed;
+    padding: 10px;
+    border-radius: 6px;
+    margin-top: 15px;
+  }
