--- a/antiveaco/templates/divida/pesquisar_divida.html
+++ b/antiveaco/templates/divida/pesquisar_divida.html
@@ -63,7 +63,11 @@
               <td>{{ d.valor }}</td>
               <td>{{ d.status }}</td>
               <td>{{ d.data_divida|date:"d/m/Y" }}</td>
-              <td><a href="{% url 'atualizar_divida' d.cod_divida %}" class="btn">Editar</a></td>
+              <td><button><a href="{% url 'atualizar_divida' d.cod_divida %}" class="btn">Editar</a></button></td>
+              <td><form method="post" action="{% url 'excluir_divida' d.cod_divida %}">
+                {% csrf_token %}
+                <button type="submit" name="excluir">Excluir</button>
+              </form></td>
             </tr>
           {% endfor %}
         </tbody>
