--- a/antiveaco/templates/divida/index_divida.html
+++ b/antiveaco/templates/divida/index_divida.html
@@ -10,7 +10,7 @@
 
     <div class="button-group">
         <div class="btn-wrapper"><a href="{% url 'cadastrar_divida' %}" class="btn btn-success">Cadastrar Dívida</a></div>
-        <div class="btn-wrapper"><a href="{% url 'get_dividas' %}" class="btn btn-primary">Pesquisar / Listar Dívidas</a></div>
+        <div class="btn-wrapper"><a href="{% url 'pesquisar_divida' %}" class="btn btn-primary">Pesquisar / Listar Dívidas</a></div>
         <div class="btn-wrapper"><a href="#" class="btn btn-warning">Editar Dívida</a></div>
         <div class="btn-wrapper"><a href="#" class="btn btn-danger">Deletar Dívida</a></div>
     </div>
