--- a/antiveaco/templates/index.html
+++ b/antiveaco/templates/index.html
@@ -14,6 +14,8 @@
         <!-- Botão para Dívidas -->
         <a href="{% url 'index_divida' %}" class="btn btn-primary">Gerenciar Dívidas</a>
 
+        <a href="{% url 'index_pagamento' %}" class="btn btn-success">Gerenciar Pagamentos</a>
+
         <!-- (Em andamento) -->
         <a href="#" class="btn btn-cliente">Gerenciar Clientes</a>
     </div>
