--- a/antiveaco/templates/index.html
+++ b/antiveaco/templates/index.html
@@ -15,7 +15,8 @@
         <a href="{% url 'index_divida' %}" class="btn btn-primary">Gerenciar Dívidas</a>
 
         <!-- (Em andamento) -->
-        <a href="#" class="btn btn-cliente">Gerenciar Clientes</a>
+        <a href="#" class="btn btn-primary">Gerenciar Clientes</a>
+        <a href="#" class="btn btn-primary">Gerenciar Pagamentos</a>
     </div>
 </div>
 {% endblock content %}
