--- a/antiveaco/templates/index.html
+++ b/antiveaco/templates/index.html
@@ -15,9 +15,7 @@
         <a href="{% url 'index_divida' %}" class="btn btn-primary">Gerenciar Dívidas</a>
 
         <a href="{% url 'index_pagamento' %}" class="btn btn-success">Gerenciar Pagamentos</a>
-
-        <!-- (Em andamento) -->
-        <a href="#" class="btn btn-primary">Gerenciar Clientes</a>
+        <a href="{% url 'index_cliente' %}" class="btn btn-primary">Gerenciar Clientes</a>
         <a href="#" class="btn btn-primary">Gerenciar Pagamentos</a>
     </div>
 </div>
