--- a/antiveaco/templates/divida/cadastrar_divida.html
+++ b/antiveaco/templates/divida/cadastrar_divida.html
@@ -8,7 +8,12 @@
 </head>
 <body>
   <div class="container">
+    <form action="{% url 'index_divida' %}" method="get" style="margin-bottom: 20px;">
+        <button type="submit" class="btn-submit">Voltar</button>
+    </form>
+    
     <h1>Cadastrar Dívida</h1>
+
     <form method="post" action="{% url 'cadastrar_divida' %}">
       {% csrf_token %}
       {{ form.as_p }}
