Corrige referência do link

--- a/antiveaco/templates/divida/index_divida.html
+++ b/antiveaco/templates/divida/index_divida.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content %}
-<link rel="stylesheet" href="{% static 'css/index_divida.css' %}">
+<link rel="stylesheet" href="{% static 'css/divida/index_divida.css' %}">
 
 <div class="container">
     <h1>Painel de Controle de Dívidas</h1>
